syntax = "proto3";
import "house.proto";
import "openable.proto";

option java_multiple_files = true;
option java_package = "gen.grpc";

package gen.grpc;

message Door {
  int64 id = 1;
  Room room = 2;
  OpenClosedState state = 3;
}

message DoorRequest {
  int64 id = 1;
}
message ListDoorsResponse {
  repeated Door doors = 1;
}

service DoorService {
  rpc GetDoorState(DoorRequest) returns (Door);
  rpc OpenDoor(DoorRequest) returns (Empty);
  rpc CloseDoor(DoorRequest) returns (Empty);
  rpc listDoors(Empty) returns (ListDoorsResponse);
}