syntax = "proto3";

option java_multiple_files = true;
option java_package = "gen.grpc";

package gen.grpc;

enum OpenClosedState {
  CLOSED = 0;
  OPEN = 1;
}